--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7312,6 +7312,11 @@ div#zoomctrl div {
     @media (min-width: 768px) {
       .tab-content .swiper-slide .area-chart {
         width: 87%; } }
+  .tab-content .swiper-slide .output-area-chart {
+    height: 200px; }
+    @media (min-width: 768px) {
+      .tab-content .swiper-slide .output-area-chart {
+        width: 87%; } }
 
 .custom-select {
   background-image: url("../images/select-img.png");
