bold removed from radial chart text.

--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -309,7 +309,7 @@ div#zoomctrl div{
 }
 .rbc-label-start{
   fill: #FFF;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 7px;
   transform: translateX(-6px) translateY(0.2px);
 }
