--- a/public/css/icomoon/style.css
+++ b/public/css/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?onp6hm');
-  src:  url('fonts/icomoon.eot?onp6hm#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?onp6hm') format('truetype'),
-    url('fonts/icomoon.woff?onp6hm') format('woff'),
-    url('fonts/icomoon.svg?onp6hm#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3w9s6w');
+  src:  url('fonts/icomoon.eot?3w9s6w#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3w9s6w') format('truetype'),
+    url('fonts/icomoon.woff?3w9s6w') format('woff'),
+    url('fonts/icomoon.svg?3w9s6w#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-wasting:before {
+  content: "\e906";
+}
+.icon-supplement:before {
+  content: "\e907";
+}
 .icon-breastfeeding:before {
   content: "\e900";
 }
