--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7249,7 +7249,10 @@ body {
     vertical-align: top; }
 
 #maternal-health, #child-health {
-  font-size: 10px !important; }
+  font-size: 10px !important;
+  width: 100%;
+  max-width: 285px;
+  margin: 7px auto; }
 
 div#zoomctrl div {
   background-color: transparent !important; }
@@ -7410,17 +7413,11 @@ div#zoomctrl div {
 @media (min-width: 1200px) {
   .container {
     max-width: 1600px; } }
-.design-test {
-  display: none;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 200%;
-  position: absolute;
-  background: #FFF;
-  z-index: 99999999;
-  opacity: 0.8;
-  background: url("../images/output.jpg") no-repeat;
-  background-position: center top; }
+@media screen and (min-width: 900px) and (min-height: 800px) {
+  .swiper-wrapper .output-col, .filter-col, #mapdiv {
+    min-height: 70vh; }
+
+  #maternal-health, #child-health {
+    max-width: 350px; } }
 
 /*# sourceMappingURL=style.css.map */
