--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -18,18 +18,33 @@
 	.container {
 	    max-width: 1600px;
 	}
+	// .right-bg:before {
+	//     content: "";
+	//     background: #e6e6e6;
+	//     top: 0;
+	//     right: 0;
+	//     height: 100%;
+	//     width: 20%;
+	//     position: absolute;
+	// }
+	// .container.right-bg {
+	//     position: relative;
+	//     padding: 0;
+	// }
 }
 
-.design-test {
-	display: none;
-	top: 0;
-	left: 0;
-    width: 100%;
-    height: 200%;
-    position: absolute;
-    background: #FFF;
-    z-index: 99999999;
-    opacity: 0.8;
-    background: url('../images/output.jpg') no-repeat;
-    background-position: center top;
+@media screen and (min-width: 900px) and (min-height: 800px) {
+	// .bottom-footer {
+	// 	position: absolute;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// }
+	.swiper-wrapper .output-col, .filter-col, #mapdiv{
+		min-height: 70vh;
+	}
+	#maternal-health, #child-health{
+		max-width: 350px;
+	}
+
 }
