--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7437,5 +7437,13 @@ div#zoomctrl div {
 
   #maternal-health, #child-health {
     max-width: 350px; } }
+.white-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #FFF;
+  z-index: -1; }
 
 /*# sourceMappingURL=style.css.map */
