--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -48,3 +48,13 @@
 	}
 
 }
+
+.white-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #FFF;
+    z-index: -1;
+}
