added icon aligned.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6733,7 +6733,7 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #dee2e6 !important; } }
 html, body {
   font-size: 16px;
-  font: "Roboto", sans-serif; }
+  font-family: "Roboto", sans-serif; }
 
 @media (min-width: 1300px) {
   .container {
@@ -7277,18 +7277,19 @@ body {
   background: url("../images/maternal.png") no-repeat center bottom;
   background-size: contain;
   content: "";
-  width: 50px;
+  width: 40px;
   height: 60px;
   top: 50%;
   left: 50%;
   display: block;
   position: absolute;
-  margin-left: -25px;
+  margin-left: -20px;
   margin-top: -62px; }
 
 #child-health:before {
-  background: url("../images/baby.png") no-repeat center;
-  background-size: contain; }
+  background: url("../images/baby.png") no-repeat center bottom;
+  background-size: contain;
+  background-position: center bottom; }
 
 div#zoomctrl div {
   background-color: transparent !important; }
