--- a/public/scss/varriables.scss
+++ b/public/scss/varriables.scss
@@ -6,7 +6,7 @@ $primary-font : 'Roboto', sans-serif;
 
 html, body{
 	font-size: 16px;
-	font: $primary-font;
+	font-family: $primary-font;
 }
 
 // site custom style
