algment fixed in dashboard.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7097,9 +7097,18 @@ body {
   background: #e6e6e6; }
   .outcome-col .outcome-progress-col {
     margin-top: 20px; }
+    @media (min-height: 900px) {
+      .outcome-col .outcome-progress-col {
+        margin-top: 35px; } }
 
 .report-icon {
   margin-top: 0px; }
+
+.txt-icon .report-icon {
+  max-width: 100%;
+  width: 36px; }
+.txt-icon .outcome-icon-dis {
+  width: calc(100% - 50px); }
 
 .outcome-col .report-heading {
   font-size: 12px;
@@ -7272,6 +7281,10 @@ body {
   max-width: 285px;
   margin: 7px auto;
   position: relative; }
+  @media (min-height: 900px) {
+    #maternal-health, #child-health {
+      margin-top: 45px;
+      margin-bottom: 35px; } }
 
 #maternal-health:before, #child-health:before {
   background: url("../images/maternal.png") no-repeat center bottom;
