--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -351,3 +351,90 @@ div#zoomctrl div{
   font-size: 7px;
   transform: translateX(-6px) translateY(0.2px);
 }
+
+
+// dashboar center icon fade in
+
+.center-icon-animation, #maternal-health:before, #child-health:before{
+  animation: animationFramesCenterIcon ease-in-out 1s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 50%;
+  animation-fill-mode: forwards; /*when the spec is finished*/
+  -webkit-animation: animationFramesCenterIcon ease-in-out 1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-animation-fill-mode: forwards; /*Chrome 16+, Safari 4+*/ 
+  -moz-animation: animationFramesCenterIcon ease-in-out 1s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 50%;
+  -moz-animation-fill-mode: forwards; /*FF 5+*/
+  -o-animation: animationFramesCenterIcon ease-in-out 1s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 50%;
+  -o-animation-fill-mode: forwards; /*Not implemented yet*/
+  -ms-animation: animationFramesCenterIcon ease-in-out 1s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 50%;
+  -ms-animation-fill-mode: forwards; /*IE 10+*/
+ 	animation-delay: 2s;
+ 	-webkit-animation-delay: 2s;
+ 	-moz-animation-delay: 2s;
+ 	-o-animation-delay: 2s;
+ 	-ms-animation-delay: 2s;
+ 	opacity: 0;
+}
+
+@keyframes animationFramesCenterIcon{
+  0% {
+    opacity:0;
+    transform:  translate(0px,-10px)  ;
+  }
+  100% {
+    opacity:1;
+    transform:  translate(0px,0px)  ;
+  }
+}
+
+@-moz-keyframes animationFramesCenterIcon{
+  0% {
+    opacity:0;
+    -moz-transform:  translate(0px,-10px)  ;
+  }
+  100% {
+    opacity:1;
+    -moz-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-webkit-keyframes animationFramesCenterIcon {
+  0% {
+    opacity:0;
+    -webkit-transform:  translate(0px,-10px)  ;
+  }
+  100% {
+    opacity:1;
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-o-keyframes animationFramesCenterIcon {
+  0% {
+    opacity:0;
+    -o-transform:  translate(0px,-10px)  ;
+  }
+  100% {
+    opacity:1;
+    -o-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-ms-keyframes animationFramesCenterIcon {
+  0% {
+    opacity:0;
+    -ms-transform:  translate(0px,-10px)  ;
+  }
+  100% {
+    opacity:1;
+    -ms-transform:  translate(0px,0px)  ;
+  }
+}
