added select option radial chart.

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -16,7 +16,7 @@
 // design test need to remove
 @media (min-width: 1200px){
 	.container {
-	    max-width: 1600px;
+	    max-width: 100%;
 	}
 	// .right-bg:before {
 	//     content: "";
