--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -7,6 +7,19 @@
 .swiper-pagination.swiper-pagination-bullets{
 	display: none;
 }
+.swiper-container-outer{
+	position: relative;
+}
+.swiper-container-outer:after {
+    content: "";
+    width: 18px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background: #e6e6e6;
+    position: absolute;
+    z-index: 0;
+}
 .legend{
 	color: #535353;
 	font-size: 12px;
