container size increased to 100% and added seperate right background in dashboard.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7044,16 +7044,16 @@ body {
 .swiper-container-outer {
   position: relative; }
 
-.swiper-container-outer:after {
-  content: "";
-  width: 18px;
-  height: 100%;
-  top: 0;
-  right: 0;
-  background: #e6e6e6;
-  position: absolute;
-  z-index: 0; }
-
+@media (min-width: 768px) {
+  .swiper-container-outer:after {
+    content: "";
+    width: 200px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background: #e6e6e6;
+    position: absolute;
+    z-index: 0; } }
 .legend {
   color: #535353;
   font-size: 12px;
