--- a/public/scss/output.scss
+++ b/public/scss/output.scss
@@ -8,7 +8,7 @@
 	font: 12px/25px $primary-font;
 	border-radius: 0;
 	&:focus{
-		border-color: transparent;
+		border-color: #CED4DA;
 		box-shadow: none;
 	}
 }
