Heading added to output pages

--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -65,6 +65,11 @@
 	line-height: 27px;
 	margin-left: -15px;
 }
+
+.box-heading-main {
+	margin-left: 0px;	
+}
+
 .view-on-map{
 	background: #AAAAAA;
 	padding: 3px 10px;
