--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -458,3 +458,6 @@ div#zoomctrl div{
     -ms-transform:  translate(0px,0px)  ;
   }
 }
+.table th.has-border, .table td.has-border{
+	border: 1px solid #b1b1b1;
+}
