--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -461,3 +461,47 @@ div#zoomctrl div{
 .table th.has-border, .table td.has-border{
 	border: 1px solid #b1b1b1;
 }
+
+.tab-outer-wrapper{
+	background: #ededed;
+	.standard-wrapper-inner{
+		padding: 0 15px;
+	}
+	.nav-tabs .nav-link {
+	    font-size: 15px;
+	    color: #666;
+	    font-weight: 500;
+	}
+
+	.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+	    border: none;
+	    border-radius: 0;
+	    background: #ffffff;
+	    color: #666;
+	}
+
+	.tab-content > .active {
+	    background: #FFF;
+	}
+	.nav-tabs {
+    border: none;
+	}
+
+	div#myTabContent {
+	}
+
+	.nav-tabs .nav-item {
+	    margin-bottom: -3px;
+	    border-color: transparent;
+	}
+
+	.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+	    border-color: transparent;
+	}
+	.table-striped tbody tr:nth-of-type(odd) {
+	   background-color: rgb(255, 255, 255);
+	}
+	.table th{
+		font-weight: 500;
+	}
+}
