--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -465,7 +465,7 @@ div#zoomctrl div{
 .tab-outer-wrapper{
 	background: #ededed;
 	.standard-wrapper-inner{
-		padding: 0 15px;
+		padding: 0px;
 	}
 	.nav-tabs .nav-link {
 	    font-size: 15px;
