--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7653,5 +7653,16 @@ footer {
     color: #fff;
     text-decoration: none;
     font-size: 12px; }
+  footer li.list-inline-item {
+    padding-right: 10px;
+    position: relative; }
+    footer li.list-inline-item:after {
+      content: "|";
+      position: absolute;
+      left: -13px;
+      color: #FFF;
+      line-height: 22px; }
+  footer li.list-inline-item:first-child::after {
+    display: none; }
 
 /*# sourceMappingURL=style.css.map */
