--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7487,6 +7487,17 @@ svg text.label {
 .vhigh {
   fill: #ea5c58; }
 
+.barchart-title {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: -30px; }
+
+.map-title {
+  position: relative;
+  text-align: center;
+  z-index: 10;
+  top: -15px; }
+
 .swiper-tab {
   background: #fff; }
   .swiper-tab .swiper-pagination {
