Dashboard changes in color of ciruclar chart , title of reporting and their content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7072,13 +7072,13 @@ body {
   .legend .ifa-distributed:before {
     background-color: #008091; }
   .legend .weight-measured:before {
-    background-color: #0c4a60; }
+    background-color: #3b3e73; }
   .legend .imci-counselling:before {
     background-color: #81ddc6; }
   .legend .supplements-distributed:before {
     background-color: #008091; }
   .legend .child-growth:before {
-    background-color: #0c4a60; }
+    background-color: #3b3e73; }
 
 .box-heading {
   display: inline-block;
