--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -40,7 +40,7 @@
 		background-color: #008091;
 	}
 	.weight-measured:before{
-		background-color: #0c4a60;
+		background-color: #3b3e73;
 	}
 	.imci-counselling:before{
 		background-color: #81ddc6;
@@ -49,7 +49,7 @@
 		background-color: #008091;
 	}
 	.child-growth:before{
-		background-color: #0c4a60;
+		background-color: #3b3e73;
 	}
 }
 
