--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7068,17 +7068,17 @@ body {
     display: inline-block;
     margin-right: 10px; }
   .legend .conselling-given:before {
-    background-color: #81ddc6; }
+    background-color: #eea039; }
   .legend .ifa-distributed:before {
-    background-color: #008091; }
+    background-color: #3b8090; }
   .legend .weight-measured:before {
-    background-color: #3b3e73; }
+    background-color: #ea5c58; }
   .legend .imci-counselling:before {
-    background-color: #81ddc6; }
+    background-color: #eea039; }
   .legend .supplements-distributed:before {
-    background-color: #008091; }
+    background-color: #3b8090; }
   .legend .child-growth:before {
-    background-color: #3b3e73; }
+    background-color: #ea5c58; }
 
 .box-heading {
   display: inline-block;
@@ -7496,7 +7496,10 @@ svg text.label {
   position: relative;
   text-align: center;
   z-index: 10;
-  top: -15px; }
+  top: -28px; }
+
+text.rbc-center-text {
+  font-weight: 500; }
 
 .swiper-tab {
   background: #fff; }
