--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -34,22 +34,22 @@
     margin-right: 10px;
 	}
 	.conselling-given:before{
-		background-color: #81ddc6;
+		background-color: #eea039;
 	}
 	.ifa-distributed:before{
-		background-color: #008091;
+		background-color: #3b8090;
 	}
 	.weight-measured:before{
-		background-color: #3b3e73;
+		background-color: #ea5c58;
 	}
 	.imci-counselling:before{
-		background-color: #81ddc6;
+		background-color: #eea039;
 	}
 	.supplements-distributed:before{
-		background-color: #008091;
+		background-color: #3b8090;
 	}
 	.child-growth:before{
-		background-color: #3b3e73;
+		background-color: #ea5c58;
 	}
 }
 
@@ -581,5 +581,9 @@ svg text.label {
     position: relative;
     text-align: center;
     z-index: 10;
-    top: -15px;
+    top: -28px;
+}
+
+text.rbc-center-text {
+    font-weight: 500;
 }
