Adding value of the bar above the bar

--- a/public/css/unicef.css
+++ b/public/css/unicef.css
@@ -34,8 +34,8 @@
 }
 
 svg text.label {
-  fill:white;
-  font: 15px;  
+  fill:#959595;
+  font-size: 15px;  
   font-weight: 400;
   text-anchor: middle;
 }
