Added target and icon blood.

--- a/public/css/icomoon-old-backup/style.css
+++ b/public/css/icomoon-old-backup/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?aa2v81');
-  src:  url('fonts/icomoon.eot?aa2v81#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?aa2v81') format('truetype'),
-    url('fonts/icomoon.woff?aa2v81') format('woff'),
-    url('fonts/icomoon.svg?aa2v81#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?m159pl');
+  src:  url('fonts/icomoon.eot?m159pl#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?m159pl') format('truetype'),
+    url('fonts/icomoon.woff?m159pl') format('woff'),
+    url('fonts/icomoon.svg?m159pl#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -53,7 +53,4 @@
 }
 .icon-triangle-top:before {
   content: "\e905";
-}
-.icon-blood-drop:before {
-  content: "\e90a";
 }
