--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6827,7 +6827,26 @@ body {
   color: #333; }
 
 .progress-bar-v {
-  background-image: url("../images/loading-strip-v.png"); }
+  background-image: url("../images/loading-strip-v.png");
+  position: relative;
+  overflow: visible; }
+  .progress-bar-v .target {
+    width: 100%;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    border-bottom: 1px solid #063d48; }
+    .progress-bar-v .target:after {
+      content: "";
+      width: 0px;
+      height: 0px;
+      background: transparent;
+      display: block;
+      position: absolute;
+      top: -9px;
+      right: -9px;
+      border: 10px solid transparent;
+      border-right: 10px solid #063d48; }
 
 .progress-bar-h {
   width: 100%;
@@ -7730,5 +7749,9 @@ footer {
       line-height: 22px; }
   footer li.list-inline-item:first-child::after {
     display: none; }
+
+@media (max-width: 991.98px) {
+  .report-col {
+    margin-top: 60px; } }
 
 /*# sourceMappingURL=style.css.map */
