--- a/public/scss/progressbar.scss
+++ b/public/scss/progressbar.scss
@@ -19,7 +19,7 @@
   float: left;
   margin-right: 2%;
   position: relative;
-  &#goal-chart-h-Stunting, &#goal-chart-h-Wasting{
+  &#goal-chart-h-Stunting, &#goal-chart-h-Wasting, &#goal-chart-h-Anemia{
     display: flex;
   }
   .target{
