--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7054,6 +7054,22 @@ body {
     -ms-transform: scaleX(0); }
   100% {
     -ms-transform: scaleX(1); } }
+.tgtxt .target.target-label.vertical {
+  border: 4px solid transparent;
+  border-right: 4px solid #063d48;
+  margin-top: -4px; }
+
+.tgtxt .target.target-label.vertical:before {
+  width: 8px;
+  height: 1px;
+  padding: 0;
+  margin: 0;
+  background: #f00;
+  background: transparent !important;
+  border-bottom: 1px solid #063d48;
+  margin-left: -6px;
+  margin-top: -12px !important; }
+
 .swiper-button-next.swiper-button-white {
   display: none; }
 
