--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7056,7 +7056,7 @@ body {
     -ms-transform: scaleX(1); } }
 .tgtxt .target.target-label.vertical {
   border: 4px solid transparent;
-  border-right: 4px solid #063d48;
+  border-right: 4px solid #808080;
   margin-top: -4px; }
 
 .tgtxt .target.target-label.vertical:before {
@@ -7066,7 +7066,7 @@ body {
   margin: 0;
   background: #f00;
   background: transparent !important;
-  border-bottom: 1px solid #063d48;
+  border-bottom: 1px solid #808080;
   margin-left: -6px;
   margin-top: -12px !important; }
 
