--- a/public/scss/progressbar.scss
+++ b/public/scss/progressbar.scss
@@ -284,7 +284,7 @@
 
 .tgtxt .target.target-label.vertical {
     border: 4px solid transparent;
-    border-right: 4px solid #063d48;
+    border-right: 4px solid #808080;
     margin-top: -4px;
 }
 
@@ -295,7 +295,7 @@
     margin: 0;
     background: #f00;
     background: transparent !important;
-    border-bottom: 1px solid #063d48;
+    border-bottom: 1px solid #808080;
     margin-left: -6px;
     margin-top: -12px !important;
 }
