--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -26,12 +26,18 @@
 	color: #535353;
 	font-size: 12px;
 	font-family: $primary-font;
-	div:before{
-		content: "";
-		width: 25px;
-		height: 10px;
-		display: inline-block;
-    margin-right: 10px;
+	div{
+    padding-left: 50px;
+		&:before{
+			content: "";
+			width: 25px;
+			height: 10px;
+			display: inline-block;
+	    margin-right: 10px;
+	    position: absolute;
+	    left: 16px;
+	    top: 4px;
+		}
 	}
 	.conselling-given:before{
 		background-color: #eea039;
@@ -384,6 +390,10 @@
 	position: absolute;
 	margin-left: -20px;
 	margin-top: -62px;
+}
+#maternal-health:before{
+    width: 53px;
+    height: 54px;
 }
 #child-health:before{
   background: url('../images/baby.png') no-repeat center bottom;
