--- a/public/css/icomoon-old/style.css
+++ b/public/css/icomoon-old/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?3w9s6w');
-  src:  url('fonts/icomoon.eot?3w9s6w#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?3w9s6w') format('truetype'),
-    url('fonts/icomoon.woff?3w9s6w') format('woff'),
-    url('fonts/icomoon.svg?3w9s6w#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?aa2v81');
+  src:  url('fonts/icomoon.eot?aa2v81#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?aa2v81') format('truetype'),
+    url('fonts/icomoon.woff?aa2v81') format('woff'),
+    url('fonts/icomoon.svg?aa2v81#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-baby:before {
+  content: "\e908";
+}
+.icon-maternal:before {
+  content: "\e909";
+}
 .icon-wasting:before {
   content: "\e906";
 }
@@ -47,4 +53,7 @@
 }
 .icon-triangle-top:before {
   content: "\e905";
+}
+.icon-blood-drop:before {
+  content: "\e90a";
 }
