--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7626,13 +7626,19 @@ text.rbc-center-text {
     fill: #FFF !important; }
   .tab-content .swiper-slide .pie-chart {
     margin-top: 15px; }
-    @media (max-width: 767.98px) {
+    @media (max-width: 991.98px) {
       .tab-content .swiper-slide .pie-chart {
         text-align: center; }
         .tab-content .swiper-slide .pie-chart svg {
-          width: 158px;
+          width: 250px;
           margin-left: auto;
           margin-right: auto; } }
+  @media (max-width: 991.98px) {
+    .tab-content .swiper-slide .pie-legend {
+      text-align: center; } }
+  @media (max-width: 991.98px) {
+    .tab-content .swiper-slide .trend-col {
+      margin-top: 1px; } }
   .tab-content .swiper-slide .area-chart {
     height: 300px; }
     @media (min-width: 768px) {
