--- a/public/scss/progressbar.scss
+++ b/public/scss/progressbar.scss
@@ -40,7 +40,7 @@
   float: left;
   margin-right: 2%;
   position: relative;
-  &#goal-chart-h-Stunting, &#goal-chart-h-Wasting, &#goal-chart-h-Anemia{
+  &#goal-chart-h-Stunting, &#goal-chart-h-Wasting, &#goal-chart-h-Anemia, &#goal-chart-h-Women-Underweighed{
     display: flex;
   }
   .target{
