Breakdown text css fix in map-title

--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -618,7 +618,7 @@ text.rbc-center-text {
 }
 
 .col-map {
-	@include media-breakpoint-up(sm) {
+	@include media-breakpoint-down(md) {
 	  padding-top: 40px;
   }
 }
