--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7562,7 +7562,7 @@ text.rbc-center-text {
 .map-hint.slowhide {
   opacity: 0; }
 
-@media (min-width: 576px) {
+@media (max-width: 991.98px) {
   .col-map {
     padding-top: 40px; } }
 
