--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -390,10 +390,22 @@
 	position: absolute;
 	margin-left: -20px;
 	margin-top: -62px;
+	@include media-breakpoint-only(md) {
+		width: 30px;
+    height: 60px;
+    margin-left: -10px;
+    margin-top: -58px;
+	}
 }
 #maternal-health:before{
     width: 53px;
     height: 54px;
+    @include media-breakpoint-only(md) {
+	    width: 35px;
+	    height: 54px;
+	    margin-left: -15px;
+	    margin-top: -58px;
+    }
 }
 #child-health:before{
   background: url('../images/baby.png') no-repeat center bottom;
