CSS for legend of radial prgorss and removing 70% data

--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -27,13 +27,14 @@
 	font-size: 12px;
 	font-family: $primary-font;
 	div{
-    padding-left: 50px;
+    padding-left: 30px;
 		&:before{
 			content: "";
 			width: 25px;
 			height: 10px;
 			display: inline-block;
 	    margin-right: 10px;
+	    margin-left: -20px;
 	    position: absolute;
 	    left: 16px;
 	    top: 4px;
