--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -650,3 +650,9 @@ text.rbc-center-text {
 	  padding-top: 40px;
   }
 }
+.geo-filter-wrap{
+	@include media-breakpoint-down(xs) {
+		padding-bottom: 20px;
+		padding-top: 20px;
+	}
+}
